# Parallel_Programing_Final_Project

./: CMakeLists.txt  FinalPP.ipynb  README.md  main.ipynb
data/: README.txt
includes/: activation.cuh  constant.cuh  dense_layer.cuh  gpu_support.cuh  load_mnist.cuh  matrix.cuh  matrix_kernel.cuh  matrix_kernel_10.cuh  matrix_kernel_2.cuh  matrix_kernel_3.cuh  matrix_kernel_4.cuh  matrix_kernel_5.cuh  matrix_kernel_6.cuh  matrix_kernel_7.cuh  matrix_kernel_8.cuh  matrix_kernel_9.cuh  neural_network.cuh  neural_network_cpu.cuh  stb_image_write.cuh
src/: activation.cu  dense_layer.cu  gpu-support.cu  gpu_support.cu  kernel.cu  load_mnist  load_mnist.cu  load_traning_set.cu  main.cc  main.cu  matrix.cu  matrix_usage.cu
src/custom/: gpu-support.cu  gpu-support.h
